[Docs Site] Stop applying display: block to table-wrap (#15302)

--- a/static/style.css
+++ b/static/style.css
@@ -3250,6 +3250,11 @@ blockquote .DocsMarkdown--header-anchor-positioner {
   overflow-x: auto;
 }
 
+/* Stop display: block applying to table-wrap shortcode */
+.DocsMarkdown--table-wrap table {
+  display: table;
+}
+
 .DocsMarkdown table.Small {
   font-size: 87%;
 }
